update content (w/ Sam); remove 'draft' note

--- a/SDL_RenderFillRects.mediawiki
+++ b/SDL_RenderFillRects.mediawiki
@@ -1,9 +1,8 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-'''DRAFT'''
 
 = SDL_RenderFillRects =
-Use this function to fill some number of rectangles in the current rendering target with the drawing color.
+Use this function to fill some number of rectangles on the current rendering target with the drawing color.
 
 
 == Syntax ==
@@ -15,14 +14,14 @@ int SDL_RenderFillRects(const SDL_Rect** rect,
 == Function Parameters ==
 {|
 |'''rect'''
-|a pointer to an array of destination rectangles
+|a pointer to an array of destination rectangles of type [[SDL_Rect]]
 |-
 |'''count'''
 |the number of rectangles
 |}
 
 == Return Value ==
-Returns 0 on success or -1 if there is no rendering context current; call [[SDL_GetError]]() for more information.
+Returns 0 on success or a negative error code on failure; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
@@ -33,7 +32,9 @@ You can add your code example here
 ''You can add useful comments here''
 
 == Related Functions ==
-:[[SDL_RenderFillRect]]???
+:[[SDL_RenderDrawRect]]
+:[[SDL_RenderDrawRects]]
+:[[SDL_RenderFillRect]]
 
 ----
 [[CategoryAPI]], [[CategoryVideo]]
