--- a/SDL_RenderPresent.mediawiki
+++ b/SDL_RenderPresent.mediawiki
@@ -1,8 +1,5 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-{|
-|<tablewidth="100%"style="color: rgb(255, 0, 0); text-align: center;">DRAFT
-|}
 
 = SDL_RenderPresent =
 Use this function to update the screen with rendering performed.
@@ -14,14 +11,10 @@ void SDL_RenderPresent(void)
 ```
 
 == Code Examples ==
-```c++
-You can add your code example here
-```
+<<Include(SDL_RenderClear, , , from="== Code Examples ==", to="== Remarks ==")>>
 
 == Remarks ==
 ''You can add useful comments here''
-
-== Related Functions ==
 
 
 ----
