--- a/CategoryPixels.mediawiki
+++ b/CategoryPixels.mediawiki
@@ -16,7 +16,7 @@ This category contains functions for handling pixel, palette, and color formats 
 <<FullSearch(category:CategoryEnum CategoryPixels)>>
 
 == Structures ==
-<<FullSearch(category:CategoryStruct "Pixels Group")>>
+<<FullSearch(category:CategoryStruct CategoryPixels)>>
 
 == Functions ==
 
