--- a/SDL_version.mediawiki
+++ b/SDL_version.mediawiki
@@ -42,4 +42,4 @@ The macro [[SDL_VERSION]] can be used to populate this structure with informatio
 : [[SDL_GetVersion]]
 
 ----
-[[CategoryStruct]], [[CategoryVersionStruct]]
+[[CategoryStruct]], [[CategoryVersion]]
