--- a/SDL_RendererFlags.mediawiki
+++ b/SDL_RendererFlags.mediawiki
@@ -44,4 +44,4 @@ You can add your code example here
 :[[SDL_CreateRenderer]]
 
 ----
-[[CategoryEnum]], [[CategoryVideoEnum]]
+[[CategoryEnum]], [[CategoryVideo]]
