--- a/SDL_TextureAccess.mediawiki
+++ b/SDL_TextureAccess.mediawiki
@@ -30,4 +30,4 @@ You can add your code example here
 :[[SDL_QueryTexturePixels]]
 
 ----
-[[CategoryEnum]], [[CategoryVideoEnum]]
+[[CategoryEnum]], [[CategoryVideo]]
