--- a/SDL_WindowFlags.mediawiki
+++ b/SDL_WindowFlags.mediawiki
@@ -60,4 +60,4 @@ You can add your code example here
 :[[SDL_ShowWindow]]
 
 ----
-[[CategoryEnum]], [[CategoryVideoEnum]]
+[[CategoryEnum]], [[CategoryVideo]]
