--- a/SDL_DisplayMode.mediawiki
+++ b/SDL_DisplayMode.mediawiki
@@ -46,4 +46,4 @@ You can add your code example here
 :[[SDL_SetWindowDisplayMode]]
 
 ----
-[[CategoryStruct]], [[CategoryVideoStruct]]
+[[CategoryStruct]], [[CategoryVideo]]
