--- a/SDL_SysWMmsg.mediawiki
+++ b/SDL_SysWMmsg.mediawiki
@@ -68,4 +68,4 @@ You can add your code example here
 == Related Functions ==
 
 ----
-[[CategoryStruct]], [[CategorySWMStruct]]
+[[CategoryStruct]], [[CategorySWM]]
