--- a/SDL_EventType.mediawiki
+++ b/SDL_EventType.mediawiki
@@ -150,4 +150,4 @@ You can add your code example here
 == Related Functions ==
 
 ----
-[[CategoryEnum]], [[CategoryEventsEnum]]
+[[CategoryEnum]], [[CategoryEvents]]
