--- a/SDL_MouseMotionEvent.mediawiki
+++ b/SDL_MouseMotionEvent.mediawiki
@@ -69,4 +69,4 @@ If the cursor is hidden ([[SDL_ShowCursor]](0)) and the input is grabbed (SDL_WM
 :[[SDL_MouseButtonEvent]]
 
 ----
-[[CategoryStruct]], [[CategoryEventsStruct]]
+[[CategoryStruct]], [[CategoryEvents]]
