update formatting - categorie

--- a/SDL_QuitEvent.mediawiki
+++ b/SDL_QuitEvent.mediawiki
@@ -32,4 +32,4 @@ You can add your code example here
 :[[SDL_SetEventFilter]] *
 
 ----
-[[CategoryStruct]], [[CategoryEventsStruct]]
+[[CategoryStruct]], [[CategoryEvents]]
