--- a/SDL_TextInputEvent.mediawiki
+++ b/SDL_TextInputEvent.mediawiki
@@ -38,4 +38,4 @@ You can add your code example here
 :[[SDL_StopTextInput]]
 
 ----
-[[CategoryStruct]], [[CategoryEventsStruct]]
+[[CategoryStruct]], [[CategoryEvents]]
