update formatting - categorie

--- a/SDL_UserEvent.mediawiki
+++ b/SDL_UserEvent.mediawiki
@@ -52,4 +52,4 @@ SDL_PushEvent(&event);
 :[[SDL_PushEvent]] *
 
 ----
-[[CategoryStruct]], [[CategoryEventsStruct]]
+[[CategoryStruct]], [[CategoryEvents]]
