--- a/CategoryKeyboard.mediawiki
+++ b/CategoryKeyboard.mediawiki
@@ -6,22 +6,22 @@
 
 = Keyboard Support =
 
-'''Include File(s):'''  [http://hg.libsdl.org/SDL/file/68dfd6df47da/include/SDL_keyboard.h SDL_keyboard.h]
+'''Include File(s):'''  [http://hg.libsdl.org/SDL/file/68dfd6df47da/include/SDL_keyboard.h SDL_keyboard.h], [[|SDL_keysym.h]], [[|SDL_scancode.h]]
+
+<<Color2(green,Links to header files are being updated...)>>
 
 
 == Introduction ==
 
-This category contains functions for handling keyboard inputs.
+This category contains functions for handling keyboard inputs.  ^Keysym and scancode information is included in this section for convenience.^
 
 == Enumerations ==
-<<FullSearch(category:CategoryKeyboardEnum)>>
 
-== Structures ==
-<<FullSearch(category:CategoryKeyboardStruct)>>
+<<FullSearch(category:CategoryEnum CategoryKeyboard)>>
 
 == Functions ==
 
-<<FullSearch(category:CategoryKeyboard)>>
+<<FullSearch(category:CategoryKeyboard -CategoryEnum -CategoryStruct)>>
 
 ----
 CategoryCategory
