--- a/CategoryJoystick.mediawiki
+++ b/CategoryJoystick.mediawiki
@@ -13,15 +13,9 @@
 
 This category contains functions for handling inputs from joysticks.
 
-== Enumerations ==
-<<FullSearch(category:CategoryJoystickEnum)>>
-
-== Structures ==
-<<FullSearch(category:CategoryJoystickStruct)>>
-
 == Functions ==
 
-<<FullSearch(category:CategoryJoystick)>>
+<<FullSearch(category:CategoryJoystick -CategoryEnum -CategoryStruct)>>
 
 ----
 CategoryCategory
