update formatting - categorie

--- a/SDL_HapticPeriodic.mediawiki
+++ b/SDL_HapticPeriodic.mediawiki
@@ -178,4 +178,4 @@ SDL_HAPTIC_SAWTOOTHDOWN
 == Related Functions ==
 
 ----
-[[CategoryStruct]], [[CategoryForceFeedbackStruct]]
+[[CategoryStruct]], [[CategoryForceFeedback]]
