--- a/SDL_AudioFormat.mediawiki
+++ b/SDL_AudioFormat.mediawiki
@@ -144,4 +144,4 @@ You can add your code example here
 :[[SDL_MixAudioFormat]]
 
 ----
-[[CategoryEnum]], [[CategoryAudioEnum]]
+[[CategoryEnum]], [[CategoryAudio]]
