--- a/CategoryAudio.mediawiki
+++ b/CategoryAudio.mediawiki
@@ -14,14 +14,14 @@
 This category contains functions for handling audio devices and audio input/output.
 
 == Enumerations ==
-<<FullSearch(category:CategoryAudioEnum)>>
+<<FullSearch(category:CategoryEnum CategoryAudio)>>
 
 == Structures ==
-<<FullSearch(category:CategoryAudioStruct)>>
+<<FullSearch(category:CategoryStruct CategoryAudio)>>
 
 == Functions ==
 
-<<FullSearch(category:CategoryAudio)>>
+<<FullSearch(category:CategoryAudio -CategoryEnum -CategoryStruct)>>
 
 ----
 CategoryCategory
