update formatting - categorie

--- a/CategoryMutex.mediawiki
+++ b/CategoryMutex.mediawiki
@@ -94,15 +94,9 @@ Note that the state that the ''condition variable'' is monitoring must always be
 *In order to ensure that dirty Hardware never remains at the dirty station any longer than necessary a ''condition variable'' is in place to alert the Dishwashers whenever the count changes (?? up ??).  <<Color2(green,Can a CV be set up to only alert if the count increments or does it have to alert for any change?)>>  This way a Dishwasher won't stay on a break if there is work to be done.-~
 
 
-== Enumerations ==
-<<FullSearch(category:CategoryMutexEnum)>>
-
-== Structures ==
-<<FullSearch(category:CategoryMutexStruct)>>
-
 == Functions ==
 
-<<FullSearch(category:CategoryMutex)>>
+<<FullSearch(category:CategoryMutex -CategoryEnum -CategoryStruct)>>
 
 ----
 CategoryCategory
