--- a/SDL_mutexV.mediawiki
+++ b/SDL_mutexV.mediawiki
@@ -26,7 +26,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-/!\ {i} It is an error to unlock a mutex that has not been locked by the current thread, and doing so results in undefined behavior.
+It is an error to unlock a mutex that has not been locked by the current thread, and doing so results in undefined behavior.
 
 <<Color2(green,define SDL_UnlockMutex(m)	SDL_mutexV(m))>> ???
 
