--- a/SDL_mutexP.mediawiki
+++ b/SDL_mutexP.mediawiki
@@ -18,7 +18,7 @@ int SDL_mutexP(SDL_mutex* mutex)
 |}
 
 == Return Value ==
-Returns 0 on success, or -1 on failure; call [[SDL_GetError]]() for more information.
+Returns 0 on success or a negative error code on failure; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
