update content - standard return value

--- a/SDL_VideoInit.mediawiki
+++ b/SDL_VideoInit.mediawiki
@@ -22,7 +22,7 @@ int SDL_VideoInit(const char* driver_name,
 |}
 
 == Return Value ==
-Returns 0 on success or -1 on failure.  Call [[SDL_GetError]]() to retrieve the error message.
+Returns 0 on success or a negative error code on failure; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
