update content - standard return value

--- a/SDL_LowerBlit.mediawiki
+++ b/SDL_LowerBlit.mediawiki
@@ -30,7 +30,7 @@ int SDL_LowerBlit(SDL_Surface* src,
 |}
 
 == Return Value ==
-If the blit is successful it returns 0, otherwise it returns -1 on failure; call [[SDL_GetError]]() for more information.
+Returns 0 on success or a negative error code on failure; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
