--- a/SDL_Init.mediawiki
+++ b/SDL_Init.mediawiki
@@ -17,7 +17,7 @@ int SDL_Init(Uint32 flags)
 |}
 
 == Return Value ==
-Returns 0 on success or -1 on failure; call [[SDL_GetError]]() for more information.
+Returns 0 on success or a negative error code on failure; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 === C ===
