--- a/SDL_HapticUnpause.mediawiki
+++ b/SDL_HapticUnpause.mediawiki
@@ -19,7 +19,7 @@ int SDL_HapticUnpause(SDL_Haptic* haptic)
 <<Color2(green,Line 1097 - the header says pause instead of unpause)>>
 
 == Return Value ==
-Returns 0 on success, or -1 on failure; call [[SDL_GetError]]() for more information.
+Returns 0 on success or a negative error code on failure; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
