--- a/SDL_HapticStopEffect.mediawiki
+++ b/SDL_HapticStopEffect.mediawiki
@@ -22,7 +22,7 @@ int SDL_HapticStopEffect(SDL_Haptic* haptic,
 |}
 
 == Return Value ==
-Returns 0 on success, or -1 on failure; call [[SDL_GetError]]() for more information.
+Returns 0 on success or a negative error code on failure; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
