--- a/SDL_HapticIndex.mediawiki
+++ b/SDL_HapticIndex.mediawiki
@@ -18,7 +18,7 @@ int SDL_HapticIndex(SDL_Haptic* haptic)
 |}
 
 == Return Value ==
-Returns the index of the ^specified^ haptic device, or -1 on failure; call [[SDL_GetError]]() for more information.
+Returns the index of the ^specified^ haptic device or a negative error code on failure; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
