update content - standard return value

--- a/SDL_FillRects.mediawiki
+++ b/SDL_FillRects.mediawiki
@@ -30,7 +30,7 @@ int SDL_FillRects(SDL_Surface*     dst,
 |}
 
 == Return Value ==
-Returns 0 on success, or -1 on failure; call [[SDL_GetError]]() for more information.
+Returns 0 on success or a negative error code on failure; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
