--- a/SDL_CondSignal.mediawiki
+++ b/SDL_CondSignal.mediawiki
@@ -18,7 +18,7 @@ int SDL_CondSignal(SDL_cond* cond)
 |}
 
 == Return Value ==
-Returns 0 on success, or -1 on failure; call [[SDL_GetError]]() for more information.
+Returns 0 on success or a negative error code on failure; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
