--- a/SDL_SetRenderDrawBlendMode.mediawiki
+++ b/SDL_SetRenderDrawBlendMode.mediawiki
@@ -1,11 +1,8 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-{|
-|<tablewidth="100%"style="color: rgb(255, 0, 0); text-align: center;">DRAFT
-|}
 
 = SDL_SetRenderDrawBlendMode =
-Use this function to set the blend mode used for drawing operations (Fill and Line).
+Use this function to set the blend mode used for drawing operations (Fill, Line, and Point).
 
 
 == Syntax ==
