--- a/SDL_SetTextureBlendMode.mediawiki
+++ b/SDL_SetTextureBlendMode.mediawiki
@@ -32,7 +32,9 @@ You can add your code example here
 <span id="blendMode"></span> '''blendMode''' can be one of these values:
 <<Include(SDL_BlendMode, , , from="== Values ==", to="== Code Examples ==")>>
 
-If the blend mode is not supported, the closest supported mode is chosen.
+If the blend mode is not supported, the closest supported mode is chosen and this function returns -1. 
+
+You can call [[SDL_GetRendererInfo]]() to fill in an [[SDL_RendererInfo]] structure with the information about the current renderer. This structure will have a mask of supported [[SDL_BlendMode]] values in the <code>blend_modes</code> member.
 
 == Related Functions ==
 :[[SDL_GetTextureBlendMode]]
