update content (w/ Sam); remove 'draft' note

--- a/SDL_SetWindowFullscreen.mediawiki
+++ b/SDL_SetWindowFullscreen.mediawiki
@@ -1,8 +1,5 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-{|
-|<tablewidth="100%"style="color: rgb(255, 0, 0); text-align: center;">DRAFT
-|}
 
 = SDL_SetWindowFullscreen =
 Use this function to set the window's fullscreen state.
@@ -17,14 +14,14 @@ int SDL_SetWindowFullscreen(SDL_Window* window,
 == Function Parameters ==
 {|
 |'''window'''
-|the type used to identify the window
+|the window to set
 |-
 |'''fullscreen'''
-|
+|1 for fullscreen or 0 for windowed
 |}
 
 == Return Value ==
-Returns 0 on success or -1 if setting the display mode failed; call [[SDL_GetError]]() for more information.
+Returns 0 on success or a negative error code on failure; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
