--- a/SDL_SetWindowGrab.mediawiki
+++ b/SDL_SetWindowGrab.mediawiki
@@ -15,10 +15,10 @@ void SDL_SetWindowGrab(SDL_Window* window,
 == Function Parameters ==
 {|
 |'''window'''
-|description
+|the window to change
 |-
 |'''mode'''
-|this is 1 to grab input, and 0 to release input ^''suggest alt: 1 to grab input or 0 to release input''^
+|1 to grab input or 0 to release input
 |}
 
 == Code Examples ==
@@ -27,7 +27,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-''You can add useful comments here''
+When input is grabbed the mouse is confined to the window.
 
 == Related Functions ==
 :[[SDL_GetWindowGrab]]
