--- a/SDL_CreateWindow.mediawiki
+++ b/SDL_CreateWindow.mediawiki
@@ -66,6 +66,7 @@ You can add your code example here
 
 == Related Functions ==
 :[[SDL_DestroyWindow]]
+:[[SDL_SelectVideoDisplay]]
 
 ----
 [[CategoryAPI]], [[CategoryVideo]]
