--- a/SDL_CreateWindowFrom.mediawiki
+++ b/SDL_CreateWindowFrom.mediawiki
@@ -29,6 +29,7 @@ You can add your code example here
 
 == Related Functions ==
 :[[SDL_DestroyWindow]]
+:[[SDL_SelectVideoDisplay]]
 
 ----
 [[CategoryAPI]], [[CategoryVideo]]
