--- a/SDL_GetCurrentDisplayMode.mediawiki
+++ b/SDL_GetCurrentDisplayMode.mediawiki
@@ -30,6 +30,7 @@ You can add your code example here
 == Related Functions ==
 :[[SDL_GetDesktopDisplayMode]]
 :[[SDL_GetDisplayMode]]
+:[[SDL_SelectVideoDisplay]]
 :[[SDL_SetWindowDisplayMode]]
 
 ----
