--- a/SDL_GetNumDisplayModes.mediawiki
+++ b/SDL_GetNumDisplayModes.mediawiki
@@ -23,6 +23,7 @@ You can add your code example here
 
 == Related Functions ==
 :[[SDL_GetDisplayMode]]
+:[[SDL_SelectVideoDisplay]]
 
 ----
 [[CategoryAPI]], [[CategoryVideo]]
