--- a/SDL_SetWindowIcon.mediawiki
+++ b/SDL_SetWindowIcon.mediawiki
@@ -15,7 +15,7 @@ void SDL_SetWindowIcon(SDL_Window*  window,
 == Function Parameters ==
 {|
 |'''window'''
-|the type used to identify the window
+|the window to change
 |-
 |'''icon'''
 |the icon for the window
