--- a/CategoryVersion.mediawiki
+++ b/CategoryVersion.mediawiki
@@ -19,7 +19,7 @@ These functions are used to collect or display information about the version of 
  ''Example:'' The current version is 1.3.0
 
 : The version may also be reported as a 4-digit numeric value where the thousands place represents the major version, the hundreds place represents the minor version, and the tens and ones places represent the patchlevel (update version).  
- ''Example:'' The current version is 1300
+ ''Example:'' The current version number is 1300
 
 == Structures ==
 <<FullSearchCached(category:CategoryStruct CategoryVersion)>>
