--- a/Tutorials.mediawiki
+++ b/Tutorials.mediawiki
@@ -3,7 +3,8 @@ There are a number of SDL tutorials available from different sources.
 
 
 == SDL 1.3 ==
-[[Tutorials/TextInput|Text Input]]
+* [[Tutorials/TextInput|Text Input]]
+: Using SDL for text inputs with specific consideration for international users.
 
 == SDL 1.2 ==
 * [http://www.sdltutorials.com/ SDLTutorials.com]
