--- a/SDL_RenderDrawRect.mediawiki
+++ b/SDL_RenderDrawRect.mediawiki
@@ -35,6 +35,7 @@ You can add your code example here
 :[[SDL_RenderDrawRects]]
 :[[SDL_RenderFillRect]]
 :[[SDL_RenderFillRects]]
+:[[SDL_RenderPresent]]
 :[[SDL_SetRenderDrawBlendMode]]
 :[[SDL_SetRenderDrawColor]]
 
