--- a/SDL_RenderFillRects.mediawiki
+++ b/SDL_RenderFillRects.mediawiki
@@ -32,9 +32,14 @@ You can add your code example here
 ''You can add useful comments here''
 
 == Related Functions ==
+:[[SDL_RenderDrawLine]]
+:[[SDL_RenderDrawLines]]
+:[[SDL_RenderDrawPoint]]
+:[[SDL_RenderDrawPoints]]
 :[[SDL_RenderDrawRect]]
 :[[SDL_RenderDrawRects]]
 :[[SDL_RenderFillRect]]
+:[[SDL_RenderPresent]]
 
 ----
 [[CategoryAPI]], [[CategoryVideo]]
