--- a/SDL_RenderPresent.mediawiki
+++ b/SDL_RenderPresent.mediawiki
@@ -16,6 +16,15 @@ void SDL_RenderPresent(void)
 == Remarks ==
 ''You can add useful comments here''
 
+== Related Functions ==
+:[[SDL_RenderDrawLine]]
+:[[SDL_RenderDrawLines]]
+:[[SDL_RenderDrawPoint]]
+:[[SDL_RenderDrawPoints]]
+:[[SDL_RenderDrawRect]]
+:[[SDL_RenderDrawRects]]
+:[[SDL_RenderFillRect]]
+:[[SDL_RenderFillRects]]
 
 ----
 [[CategoryAPI]], [[CategoryVideo]]
