--- a/SDL_CondBroadcast.mediawiki
+++ b/SDL_CondBroadcast.mediawiki
@@ -14,7 +14,7 @@ int SDL_CondBroadcast(SDL_cond* cond)
 == Function Parameters ==
 {|
 |'''cond'''
-|^a pointer to the SDL_cond structure that is being applied^ ???
+|^a pointer to the condition variable that is being applied^ ???
 |}
 
 == Return Value ==
